Avoid animation glitches when toggling visibility.

--- a/pootle/static/css/editor.css
+++ b/pootle/static/css/editor.css
@@ -623,6 +623,7 @@ html[dir="rtl"] .extra-item-meta
 #tm-results,
 #translator-comment
 {
+    clear: both;
     margin-top: 1em;
 }
 
